Add Side bar Nav LInks

--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,110 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #f8f8f8;
+:root {
+  --theme: orange;
+  --themeDark: rgb(201, 130, 0);
+  --themeLight: rgb(255, 220, 156);
+  --white: #ffffff;
+  --black: #030201;
+  --lightblack: #a3a2a4;
+  --bgColor: #f8f8f8;
 }
+
+body {
+  background-color: var(--bgColor);
+}
+
+/* Global Css Style start */
+a {
+  text-decoration: none;
+  color: var(--black);
+}
+/* Global Css Style end */
+
+/* Aside Style Start */
 
 body aside {
   height: 100dvh;
   width: 300px;
-  background-color: white;
+  background-color: var(--white);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1599;
+  padding: 20px 15px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+/* logo start */
+aside .logo {
+  margin-bottom: 20px;
 }
 
+aside .logo a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  color: var(--black);
+}
+
+aside .logo a i {
+  font-size: 2.3rem;
+  color: var(--theme);
+}
+aside .logo a span {
+  font-size: 1.3rem;
+}
+/* logo end */
+
+/* Menu Start */
+aside .menu .list_title {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: var(--lightblack);
+  padding: 0px 5px;
+}
+
+aside .menu .sideList {
+  list-style-type: none;
+  padding: 20px 0px;
+}
+
+aside .menu .sideList .sideItem {
+  margin-bottom: 10px;
+}
+aside .menu .sideList .sideItem a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  gap: 10px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0);
+  transition: all 0.3s;
+}
+
+aside .menu .sideList .sideItem a:hover {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.123);
+}
+aside .menu .sideList .sideItem a i {
+  font-size: 1.6rem;
+}
+
+aside .menu .sideList .sideItem a span {
+  font-size: 1.1rem;
+  font-weight: 500;
+  transition: all 0.3s;
+}
+
+
+aside .menu .sideList .sideItem a:hover span {
+padding-bottom: 3px;
+}
+/* Menu end */
+
+/* Aside Style End */
 /* Main Style Start */
 body main {
   min-height: 100dvh;
@@ -35,7 +125,7 @@ main nav {
 }
 
 main nav form {
-  border: 1px solid black;
+  border: 1px solid var(--black);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,7 +137,7 @@ main nav form {
 
 main nav form label {
   font-size: 1.3rem;
-  color: black;
+  color: var(--black);
 }
 
 main nav form input {
@@ -60,30 +150,30 @@ main nav form input:focus-visible {
   border: none;
 }
 
-nav .info{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
+nav .info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 main nav .icons a {
   text-decoration: none;
-  color: black;
+  color: var(--black);
   font-size: 2rem;
 }
-nav .profile{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white ;
-    padding: 5px 5px ;
-    border-radius: 10px;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.171);
-    width: fit-content;
+nav .profile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--white);
+  padding: 5px 5px;
+  border-radius: 10px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.171);
+  width: fit-content;
 }
-nav .profile span{
-    padding: 0px 20px;
+nav .profile span {
+  padding: 0px 20px;
 }
 
 nav .profile .profile_pic {
@@ -92,10 +182,10 @@ nav .profile .profile_pic {
   border-radius: 50%;
   overflow: hidden;
 }
-nav .profile .profile_pic img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+nav .profile .profile_pic img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 /* Nav Style end */
