--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
   --black: #030201;
   --lightblack: #a3a2a4;
   --bgColor: #f8f8f8;
+  --cardBG: #cdcdfd;
 }
 
 body {
@@ -101,9 +102,8 @@ aside .menu .sideList .sideItem a span {
   transition: all 0.3s;
 }
 
-
 aside .menu .sideList .sideItem a:hover span {
-padding-bottom: 3px;
+  padding-bottom: 3px;
 }
 /* Menu end */
 
@@ -189,4 +189,94 @@ nav .profile .profile_pic img {
 }
 
 /* Nav Style end */
+
+.main_content {
+  padding: 30px 10px 30px;
+}
+
+/* Count Card Style Start */
+
+.countCards{
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card {
+  padding: 20px;
+  background-color: var(--cardBG);
+  border-radius: 15px;
+  width: calc(100% / 4 - 15px);
+}
+.countCards .card .dateMenu{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.countCards .card .dateMenu .date {
+  background-color: var(--white);
+  padding: 5px 10px;
+  border-radius: 10px;
+  width: fit-content;
+}
+
+.countCards .card .dateMenu i {
+  font-size: 1.6rem;
+  color: var(--white);
+}
+
+.countCards .card .count{
+  font-size: 2.3rem; 
+  color: black;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.countCards .card .title{
+  font-size: 1rem ;
+  color: rgb(97, 97, 97)
+}
+
+.countCards .card:nth-child(even){
+  background-color: #f5de7a;
+}
+
+.countCards .dropdown{
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+}
+.countCards .dropdown .dropmenu{
+  list-style: none;
+  background-color: var(--white);
+  border-radius: 10px;
+  overflow: hidden;
+  height: 0px;
+  min-height: 0px;
+  max-height: 0px;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  transition: all 0.3s;
+}
+
+.dropdown:hover .dropmenu{
+  height: auto;
+  min-height: 70px;
+  max-width: 110px;
+}
+
+.countCards .dropdown .dropmenu li{
+  padding: 10px 15px;
+  transition: all 0.3s;
+}
+
+.countCards .dropdown .dropmenu li:hover{
+  background-color: rgb(231, 231, 231);
+}
+/* Count Card Style End */
+
 /* Main Style End */
