--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,76 @@ a {
   text-decoration: none;
   color: var(--black);
 }
+
+/* Padding classes start */
+.pt-lg {
+  padding-top: 50px;
+}
+.pb-lg {
+  padding-bottom: 50px;
+}
+
+.py-lg {
+  padding: 50px 0px;
+}
+
+.pt-md {
+  padding-top: 30px;
+}
+.pb-md {
+  padding-bottom: 30px;
+}
+
+.py-md {
+  padding: 30px 0px;
+}
+.pt-sm {
+  padding-top: 15px;
+}
+.pb-sm {
+  padding-bottom: 15px;
+}
+
+.py-sm {
+  padding: 15px 0px;
+}
+
+/* Padding classes end */
+/* margin classes start */
+.mt-lg {
+  margin-top: 50px;
+}
+.mb-lg {
+  margin-bottom: 50px;
+}
+
+.my-lg {
+  margin: 50px 0px;
+}
+
+.mt-md {
+  margin-top: 30px;
+}
+.mb-md {
+  margin-bottom: 30px;
+}
+
+.my-md {
+  margin: 30px 0px;
+}
+.mt-sm {
+  margin-top: 15px;
+}
+.mb-sm {
+  margin-bottom: 15px;
+}
+
+.my-sm {
+  margin: 15px 0px;
+}
+
+/* margin classes end */
+
 /* Global Css Style end */
 
 /* Aside Style Start */
@@ -109,22 +179,27 @@ aside .menu .sideList .sideItem a:hover span {
 
 /* Aside Style End */
 /* Main Style Start */
-body main {
+body {
   min-height: 100dvh;
-  background-color: transparent;
+  /* background-color: transparent; */
   padding-left: 320px;
+  padding-right: 20px;
 }
 
 /* Nav Style Start */
-main nav {
-  padding: 10px 10px 10px 0px;
+body nav {
+  padding: 10px 10px 10px 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 30px;
+  position: sticky;
+  top: 0px;
+  background-color: white;
+  border-radius: 0px 0px 10px 10px;
 }
 
-main nav form {
+body nav form {
   border: 1px solid var(--black);
   display: flex;
   justify-content: center;
@@ -135,17 +210,17 @@ main nav form {
   padding: 8px 30px 5px 10px;
 }
 
-main nav form label {
+body nav form label {
   font-size: 1.3rem;
   color: var(--black);
 }
 
-main nav form input {
+body nav form input {
   border: none;
   background-color: transparent;
 }
 
-main nav form input:focus-visible {
+body nav form input:focus-visible {
   outline: none;
   border: none;
 }
@@ -157,7 +232,7 @@ nav .info {
   gap: 30px;
 }
 
-main nav .icons a {
+body nav .icons a {
   text-decoration: none;
   color: var(--black);
   font-size: 2rem;
@@ -169,7 +244,7 @@ nav .profile {
   background-color: var(--white);
   padding: 5px 5px;
   border-radius: 10px;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.171);
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.083);
   width: fit-content;
 }
 nav .profile span {
@@ -189,14 +264,9 @@ nav .profile .profile_pic img {
 }
 
 /* Nav Style end */
-
-.main_content {
-  padding: 30px 10px 30px;
-}
-
 /* Count Card Style Start */
 
-.countCards{
+.countCards {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
@@ -210,7 +280,7 @@ nav .profile .profile_pic img {
   border-radius: 15px;
   width: calc(100% / 4 - 15px);
 }
-.countCards .card .dateMenu{
+.countCards .card .dateMenu {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -228,28 +298,28 @@ nav .profile .profile_pic img {
   color: var(--white);
 }
 
-.countCards .card .count{
-  font-size: 2.3rem; 
+.countCards .card .count {
+  font-size: 2.3rem;
   color: black;
   font-weight: 600;
   margin-bottom: 20px;
 }
 
-.countCards .card .title{
-  font-size: 1rem ;
-  color: rgb(97, 97, 97)
+.countCards .card .title {
+  font-size: 1rem;
+  color: rgb(97, 97, 97);
 }
 
-.countCards .card:nth-child(even){
+.countCards .card:nth-child(even) {
   background-color: #f5de7a;
 }
 
-.countCards .dropdown{
+.countCards .dropdown {
   position: relative;
   z-index: 0;
   cursor: pointer;
 }
-.countCards .dropdown .dropmenu{
+.countCards .dropdown .dropmenu {
   list-style: none;
   background-color: var(--white);
   border-radius: 10px;
@@ -263,53 +333,56 @@ nav .profile .profile_pic img {
   transition: all 0.3s;
 }
 
-.dropdown:hover .dropmenu{
+.dropdown:hover .dropmenu {
   height: auto;
   min-height: 70px;
   max-width: 110px;
 }
 
-.countCards .dropdown .dropmenu li{
+.countCards .dropdown .dropmenu li {
   padding: 10px 15px;
   transition: all 0.3s;
 }
 
-.countCards .dropdown .dropmenu li:hover{
+.countCards .dropdown .dropmenu li:hover {
   background-color: rgb(231, 231, 231);
 }
 /* Count Card Style End */
-/* main table start  */
-main .table_card{
+/* body table start  */
+body .table_card {
   padding: 0px 20px;
   background-color: white;
   box-shadow: 1px 1px 10px #00000015;
   border-radius: 10px;
+  overflow-x: auto;
 }
-main .table_card table {
+body .table_card table {
   border-collapse: collapse;
   width: 100%;
 }
-main .table_card table th {
+body .table_card table th {
   font-size: 1.2rem;
   text-transform: capitalize;
   text-align: start;
   padding: 15px 20px;
+  text-wrap: nowrap;
 }
-main .table_card table td {
+body .table_card table td {
   font-size: 0.9rem;
   text-transform: uppercase;
   text-align: start;
   padding: 15px 20px;
+  text-wrap: nowrap;
 }
 
-main .table_card table tr {
+body .table_card table tr {
   background-color: #fff;
   border-radius: 20px;
 }
-main .table_card table tr:nth-child(even) {
-  background-color: #ededed;;
+body .table_card table tr:nth-child(even) {
+  background-color: #ededed;
 }
-main .table_card table tr td button{
+body .table_card table tr td button {
   padding: 7px 10px;
   border-radius: 5px;
   font-size: 1rem;
@@ -317,32 +390,50 @@ main .table_card table tr td button{
   border: none;
   text-transform: capitalize;
 }
-main .table_card table tr td .progress{
+body .table_card table tr td .progress {
   background-color: #39a250;
-    }
-main .table_card table tr td .open{
+}
+body .table_card table tr td .open {
   background-color: #ffc40e;
   color: black;
 }
-main .table_card table tr td .on-hold{
+body .table_card table tr td .on-hold {
   background-color: #dd2a3d;
 }
-main .table_card table tr th:first-child{
-  border-top-left-radius: 5px;
-  border-top-left-radius: 5px;
+body .table_card table tr th:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
-main .table_card table tr th:last-child{
-  border-top-right-radius: 5px;
-  border-top-right-radius: 5px;
-}
-main .table_card table tr td:first-child{
-  border-top-left-radius: 5px;
-  border-top-left-radius: 5px;
-}
-main .table_card table tr td:last-child{
+body .table_card table tr th:last-child {
   border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+body .table_card table tr td:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+body .table_card table tr td:last-child {
   border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 /* main table end  */
+
+/* Chart Style Start */
+
+body .chart_parent  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+body .chart_card {
+  padding: 0px 20px;
+  background-color: white;
+  box-shadow: 1px 1px 10px #00000015;
+  border-radius: 10px;
+  width: calc(100% / 2 - 20px);
+}
+/* Chart Style End */
 /* Main Style End */
