--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,18 @@
   --cardBG: #cdcdfd;
 }
 
+::-webkit-scrollbar{
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-track{
+  background-color: rgb(236, 236, 236);
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background-color: rgb(175, 175, 175);
+}
+
 body {
   background-color: var(--bgColor);
 }
@@ -195,6 +207,7 @@ body nav {
   gap: 30px;
   position: sticky;
   top: 0px;
+  z-index: 999;
   background-color: white;
   border-radius: 0px 0px 10px 10px;
 }
